--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,15 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
+.idea/AndroidProjectSystem.xml
+.idea/appInsightsSettings.xml
+.idea/compiler.xml
+.idea/deploymentTargetSelector.xml
+.idea/inspectionProfiles/
+.idea/kotlinc.xml
+.idea/migrations.xml
+.idea/runConfigurations.xml
+.idea/misc.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
